--- a/index.html
+++ b/index.html
@@ -10,56 +10,56 @@
     charset="utf-8"
   >
 </head>
-<body>
+<body class="page">
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="header-pic" src="./eisenhower-matrix.jpg">
+    <a class="header-desc" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered">
     <p id="adding-task">
-      <label for="new-task">Add Item</label>
+      <label class="new-task-label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input
           id="new-task"
-          class="task"
+          class="text-input"
           type="text"
         >
-        <button>Add</button>
+        <button clas="button add">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
+    <h3 class="part-header">Todo</h3>
     <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+      <li class="task-list-item">
+        <input type="checkbox" class="checkbox-input">
+        <label class="task-label">Pay Bills</label>
+        <input type="text" class="text-input">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
+      <li class="task-list-item edit-mode">
+        <input type="checkbox" class="checkbox-input">
+        <label class="task-label">Go Shopping</label>
         <input 
           type="text"
           value="Go Shopping"
-          class="task"
+          class="text-input"
         >
-        <button class="edit">Save</button>
-        <button class="delete">
+        <button class="button edit">Save</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="part-header">Completed</h3>
     <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+      <li class="task-list-item">
+        <input type="checkbox" class="checkbox-input" checked>
+        <label class="task-label">See the Doctor</label>
+        <input type="text" class="text-input">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
