refactor: Advanced: HTM:1.1. Semantics, 1.2. Media alternatives

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   >
 </head>
 <body class="page">
-  <div class="header">
-    <img class="header-pic" src="./eisenhower-matrix.jpg">
+  <header class="header">
+    <img class="header-pic" src="./eisenhower-matrix.jpg" alt="eisenhower matrix pic">
     <a class="header-desc" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered">
-    <p id="adding-task">
+  </header>
+  <main class="centered">
+    <section id="adding-task">
       <label class="new-task-label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input
@@ -26,7 +26,7 @@
         >
         <button clas="button add">Add</button>
       </div>
-    </p>
+    </section>
     <h3 class="part-header">Todo</h3>
     <ul id="incomplete-tasks">
       <li class="task-list-item">
@@ -35,7 +35,7 @@
         <input type="text" class="text-input">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove-pic">
         </button>
       </li>
       <li class="task-list-item edit-mode">
@@ -48,7 +48,7 @@
         >
         <button class="button edit">Save</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove-pic">
         </button>
       </li>
     </ul>
@@ -60,11 +60,11 @@
         <input type="text" class="text-input">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove-pic">
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
