--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 </head>
 <body class="page">
   <header class="header">
-    <img class="header-pic" src="./eisenhower-matrix.jpg" alt="eisenhower matrix pic">
-    <a class="header-desc" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img
+      class="header-pic"
+      src="./eisenhower-matrix.jpg"
+      alt="eisenhower matrix pic"
+    >
+    <a
+      class="header-desc"
+      href="https://goal-life.com/page/method/matrix-eisenhower"
+    >Want more details?</a>
   </header>
   <main class="centered">
     <section id="adding-task">
-      <label class="new-task-label" for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <label
+        class="adding-task__label"
+        for="new-task"
+      >Add Item</label>
+      <div class="adding-task__row-wrapper">
         <input
           id="new-task"
           class="text-input"
@@ -27,43 +37,74 @@
         <button clas="button add">Add</button>
       </div>
     </section>
-    <h3 class="part-header">Todo</h3>
-    <ul id="incomplete-tasks">
-      <li class="task-list-item">
-        <input type="checkbox" class="checkbox-input">
-        <label class="task-label">Pay Bills</label>
-        <input type="text" class="text-input">
-        <button class="button edit">Edit</button>
-        <button class="button delete">
-          <img src="./remove.svg" alt="remove-pic">
-        </button>
-      </li>
-      <li class="task-list-item edit-mode">
-        <input type="checkbox" class="checkbox-input">
-        <label class="task-label">Go Shopping</label>
-        <input 
-          type="text"
-          value="Go Shopping"
-          class="text-input"
-        >
-        <button class="button edit">Save</button>
-        <button class="button delete">
-          <img src="./remove.svg" alt="remove-pic">
-        </button>
-      </li>
-    </ul>
-    <h3 class="part-header">Completed</h3>
-    <ul id="completed-tasks">
-      <li class="task-list-item">
-        <input type="checkbox" class="checkbox-input" checked>
-        <label class="task-label">See the Doctor</label>
-        <input type="text" class="text-input">
-        <button class="button edit">Edit</button>
-        <button class="button delete">
-          <img src="./remove.svg" alt="remove-pic">
-        </button>
-      </li>
-    </ul>
+    <section class="tasks">
+      <h3 class="part-header">Todo</h3>
+      <ul id="tasks__incomplete">
+        <li class="tasks__list-item">
+          <input
+            type="checkbox"
+            class="checkbox-input"
+          >
+          <label class="task-label">Pay Bills</label>
+          <input 
+            type="text"
+            class="text-input"
+          >
+          <button
+            class="
+            button
+            edit"
+          >Edit</button>
+          <button
+            class="
+            button
+            delete"
+          >
+            <img src="./remove.svg" alt="remove-pic">
+          </button>
+        </li>
+        <li class="tasks__list-item tasks__edit-mode">
+          <input
+            type="checkbox"
+            class="checkbox-input"
+          >
+          <label class="task-label">Go Shopping</label>
+          <input 
+            type="text"
+            value="Go Shopping"
+            class="text-input"
+          >
+          <button class="button edit">Save</button>
+          <button class="button delete">
+            <img
+              src="./remove.svg"
+              alt="remove-pic"
+            >
+          </button>
+        </li>
+      </ul>
+      <h3 class="part-header">Completed</h3>
+      <ul id="tasks__completed">
+        <li class="tasks__list-item">
+          <input 
+            type="checkbox" 
+            class="checkbox-input" 
+            checked
+          >
+          <label class="task-label">See the Doctor</label>
+          <input 
+            type="text"
+            class="text-input"
+          >
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img
+              src="./remove.svg"
+              alt="remove-pic">
+          </button>
+        </li>
+      </ul>
+    </section>
   </main>
   <script src="app.js"></script>
 </body>
