--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           class="text-input"
           type="text"
         >
-        <button clas="button add">Add</button>
+        <button class="button add">Add</button>
       </div>
     </section>
     <section class="tasks">
